# CloudMind-AcademyBackend

./: .replit  =0.103.2  =2.7.0  Pasted--Updated-Backend-Architecture-Overview-The-backend-now-includes-the-following-components-inte-1728550710112.txt  Pasted-Neural-Chat-7B-v3-1-A-fine-tuned-model-based-on-mistralai-Mistral-7B-v0-1-on-the-open-source-data-1728588439402.txt  Pasted-Neural-Chat-7B-v3-1-A-fine-tuned-model-based-on-mistralai-Mistral-7B-v0-1-on-the-open-source-datase-1728602450880.txt  Pasted-Text-models-Show-tokens-per-Model-Name-ID-Prompt-cost-per-1M-tokens-Completion-cost--1728588721563.txt  Pasted-Text-models-Show-tokens-per-Model-Name-ID-Prompt-cost-per-1M-tokens-Completion-cost-per--1728602428480.txt  admin_config.py  auth_config.py  check_torch.py  code_generator_example.py  config.py  main.py  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  run_all.sh  setup.py  test_certificates.py  test_inf2_endpoint.py
frontend/: package-lock.json  package.json
frontend/components/dashboard/: CodingChallenges.tsx  Header.tsx  LearningProgress.tsx  Overview.tsx  RecentCourses.tsx  Sidebar.tsx  UpcomingExams.tsx
frontend/pages/: dashboard.tsx
mobile_app/: app.json  package.json
mobile_app/CloudMindAcademy/: App.js  package-lock.json
mobile_app/CloudMindAcademy/app/: +not-found.tsx  workshops.tsx
mobile_app/CloudMindAcademy/app/(tabs)/: _layout.tsx  browse.tsx  explore.tsx  more.tsx
mobile_app/CloudMindAcademy/src/screens/: AITutorScreen.js  ARVRScreen.js  CourseListScreen.js  HomeScreen.js  LeaderboardScreen.js  LoginScreen.js  (+1 more)
mobile_app/app/: +html.tsx  _layout.tsx
mobile_app/app/(tabs)/: index.tsx  learn.tsx
mobile_app/src/screens/: CodingChallengesScreen.js  HomeScreen.js  LeaderboardScreen.js  TimeTrackingScreen.js
mobile_app/src/services/: api.js
models/: certificate.py  course.py  course_prerequisite.py  exam.py  notification.py  quiz.py  user.py  video_content.py
new_venv/: pyvenv.cfg
repl_nix_cloudmindacademybackend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
routers/: advanced_search.py  ai_model_training.py  ai_tutor.py  analytics.py  ar_vr.py  auth.py  certificate.py  code_sandbox.py  coding_challenges.py  collaboration.py  course.py  course_feedback.py  course_prerequisite.py  course_prerequisites.py  data_visualization.py  emotion_analysis.py  exam.py  gamification.py  grading.py  learning_path.py  live_streaming.py  lms_integration.py  notification.py  offline_learning.py  openrouter.py  percipio.py  plagiarism.py  quiz.py  social.py  supabase.py  text_embedding.py  time_tracking.py  translation.py  user.py  v0dev.py  video_content.py  virtual_lab.py  voice_recognition.py  web_scraping.py
services/: advanced_search_service.py  ai_model_training_service.py  ai_tutor.py  ar_vr_service.py  blockchain_service.py  certificate_service.py  coding_challenges_service.py  course_feedback_service.py  course_prerequisite_service.py  course_prerequisites_service.py  course_service.py  data_visualization_service.py  emotion_analysis.py  emotion_analysis_service.py  exam_service.py  gamification_engine.py  grading_service.py  live_streaming_service.py  llm_orchestrator.py  lms_integration.py  lms_integration_service.py  ml_flows.py  notification_service.py  offline_learning_service.py  openai_client.py  openrouter_service.py  percipio_integration.py  percipio_integration_service.py  percipio_service.py  plagiarism_detection.py  plagiarism_detection_service.py  sentiment_analysis.py  sentiment_analysis_service.py  supabase_client.py  text_embedding_service.py  time_tracking_service.py  translation.py  translation_service.py  user_service.py  v0dev_service.py  (+5 more)
(+2 files in other folders)
