[project]
name = "repl-nix-cloudmindacademybackend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.9",
    "anthropic>=0.36.0",
    "datasets>=3.0.1",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "fuzzywuzzy>=0.18.0",
    "langchain>=0.0.27",
    "numpy>=2.1.2",
    "openai>=1.51.2",
    "pandas",
    "plotly>=2.2.3",
    "python-dotenv>=1.0.1",
    "python-levenshtein>=0.26.0",
    "python-multipart>=0.0.12",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "supabase>=2.9.0",
    "torch>=2.4.1",
    "trafilatura>=1.12.2",
    "transformers>=4.45.2",
    "uvicorn>=0.31.1",
    "web3==6.15.1",
    "websockets>=13.1",
]
