[project]
name = "repl-nix-cloudmindacademybackend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "aiohttp>=3.10.9",
    "anthropic>=0.36.0",
    "beautifulsoup4>=4.12.3",
    "bert-for-tf2",
    "clip",
    "datasets>=3.0.1",
    "email-validator>=2.2.0",
    "fastapi-amis-admin>=0.7.2",
    "fastapi-code-generator>=0.5.1",
    "fastapi-mail>=1.4.1",
    "fastapi>=0.115.0",
    "fuzzywuzzy>=0.18.0",
    "imagebind",
    "langchain>=0.0.27",
    "librosa",
    "nltk",
    "numpy==1.23.5",
    "openai>=1.51.2",
    "opencv-python-headless>=4.8.1.78",
    "pandas",
    "pillow>=10.4.0",
    "plotly>=2.2.3",
    "python-dotenv>=1.0.1",
    "python-levenshtein>=0.26.0",
    "python-multipart>=0.0.12",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "selenium>=4.25.0",
    "sentence-transformers>=3.2.0",
    "sentencepiece",
    "setuptools",
    "spacy",
    "sqlalchemy>=2.0.35",
    "supabase>=2.9.0",
    "tensorflow>=2.14.0",
    "torch>=2.4.1",
    "torchaudio",
    "torchvision",
    "trafilatura>=1.12.2",
    "transformers>=4.45.2",
    "uvicorn>=0.31.1",
    "web3==6.15.1",
    "websockets>=13.1",
]
